--- a/TrabalhoI/Trabalho PDI.ipynb
+++ b/TrabalhoI/Trabalho PDI.ipynb
@@ -291,9 +291,6 @@
     "    imgRGB = np.stack((RedChannel, GreenChannel, BlueChannel), axis = 2)\n",
     "    return imgRGB\n",
     "\n",
-    "def arrendanda(x):\n",
-    "    return int(round(x))\n",
-    "\n",
     "#Função que realiza o truncamento de pixels para caso e vai arredondar para o teto se x > 0.5 ou piso se x < 0.5\n",
     "def trunca(number):\n",
     "    if (number > 255):\n",
@@ -390,7 +387,7 @@
     "\n",
     "#Plottamos a imagem\n",
     "plt.imshow(negative)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -616,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
