Função save adicionada no Negative e no Median Blur

--- a/TrabalhoI/Trabalho PDI.ipynb
+++ b/TrabalhoI/Trabalho PDI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -384,9 +384,11 @@
     "#Normalizamos a imagem usando as funções de truncamento e arredondamento \n",
     "img = trunca_vetorizado(img)\n",
     "\n",
-    "#Plottamos a imagem\n",
+    "#Plottamos e salvamos imagem\n",
     "plt.imshow(negative)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "negative = Image.fromarray(np.uint8(negative), \"RGB\")\n",
+    "negative.save(\"negative.png\")"
    ]
   },
   {
@@ -402,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -570,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -633,9 +635,10 @@
     "img = carregaRGB(\"ruido.png\")\n",
     "medianBlurred = medianBlur(img)\n",
     "\n",
-    "#Plottamos a imagem\n",
+    "#Plottamos e salvamos a imagem\n",
     "plt.imshow(medianBlurred)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "medianBlurred.save(\"medianBlurred.png\")"
    ]
   },
   {
